2015-11-10  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (edit_draw): Skip a zero-length match only when there
	/is/ a match.  Found with valgrind.  This fixes Savannah bug #41908.

2015-11-06  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (write_lockfile): Don't bail out when the hostname is
	overlong, but instead truncate it properly and continue.  This fixes
	Ubuntu bug #1509081 reported by Sam Reed.

2015-10-31  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (copy_from_filestruct): When pasting while the mark is
	on, the mark's pointer needs to be refreshed only when it is on the
	same line as the cursor, and the mark's x coordinate only when the
	mark is located after the cursor.  This fixes Savannah bug #46347.

2015-10-29  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (add_undo): Only skip adding an undo when the current
	action equals the last action.  This condition is needed for when
	typing text is broken by an undo+redo.  Fixes Savannah bug #46323.

2015-09-05  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (display_string, edit_draw): Force a redraw of a line
	only when it contains a multicolumn character, to spare all regular
	text this significant slowdown.  This fixes Savannah bug #45684
	reported by Wyatt Ward.

2015-08-14  Benno Schulenberg  <bensberg@justemail.net>
	* src/help.c (help_line_len): The wrap location can be beyond the EOL,
	so for determining the length of the current line, don't start at that
	location but at the beginning.  This fixes Savannah bug #45770.

2015-08-13  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (do_find_bracket): Remove mistaken comparison between
	pointer and literal character.  Found with cppcheck.

2015-08-11  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (write_file): Avoid calling copy_file() with a null
	pointer.  Found with cppcheck.
	* src/files.c (write_file): A failure to delete the temporary file